tests/NormalTests/paczka1/fuzzy1/49403104.err
Error in line 1: bXPQE S58 96,1
Error in line 9: 3Yq1RD A752 79,6
Error in line 29: EEj7NZQ8 S302 317,5
